[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dna_analyzer"
version = "0.0.1"
description = "ML model to analyze dna sequences and get wrong sequences"
authors = [
  { name = "Michele Verriello" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["dna_analyzer"]
force_sort_within_sections = true
